Spacing fix

--- a/styles/bases/headings.css
+++ b/styles/bases/headings.css
@@ -1,5 +1,5 @@
 @layer base {
   h1 {
-    @apply text-4xl mt-3 mb-2 font-black;
+    @apply text-4xl mt-4 mb-2 font-black;
   }
 }
